--- a/SiteDeEventos/index.html
+++ b/SiteDeEventos/index.html
@@ -91,8 +91,8 @@
 
   <section>
     <div class="container">
-      <h3 style="font-weight: bold;">AQUI ESTÃO ALGUNS EVENTOS PRÓXIMOS :</h3><a type="button"
-        class="btn btn-warning" href="eventos.html"> Veja mais
+      <h3 style="font-weight: bold;">AQUI ESTÃO ALGUNS EVENTOS PRÓXIMOS :</h3><a type="button" class="btn btn-warning"
+        href="eventos.html"> Veja mais
         aqui!</a>
       <br>
       <br>
@@ -105,10 +105,10 @@
             <div class="card-heading">
               Faça seu dinheiro trabalhar para você
             </div>
-              <div class="dataLocal">
-                <p href="" class="card-text"><strong>Local:</strong> João Pessoa,PB</p>
-                <p href="" class="card-text"><strong>Data:</strong> 19/08/2023</p>
-              </div>
+            <div class="dataLocal">
+              <p href="" class="card-text"><strong>Local:</strong> João Pessoa,PB</p>
+              <p href="" class="card-text"><strong>Data:</strong> 19/08/2023</p>
+            </div>
             <a href="evento1.html" class="card-button"> Ver Evento</a>
           </div>
         </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="dataLocal">
               <p href="" class="card-text"><strong>Local:</strong> Limeira,SP</p>
-                <p href="" class="card-text"><strong>Data:</strong> 30/08/2023</p>
+              <p href="" class="card-text"><strong>Data:</strong> 30/08/2023</p>
             </div>
             <a href="evento2.html" class="card-button"> Ver Evento</a>
           </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="dataLocal">
               <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
-                <p href="" class="card-text"><strong>Data:</strong> 11/08/2023 - 12/08/2023</p>
+              <p href="" class="card-text"><strong>Data:</strong> 11/08/2023 - 12/08/2023</p>
             </div>
             <a href="evento3.html" class="card-button"> Ver Evento</a>
           </div>
@@ -153,7 +153,8 @@
           <div class="my-md-5 py-5">
             <h1 style="font-weight: bold; font-family: sans-serif;">NÃO PERCA ESSA OPORTUNIDADE</h1>
             <br>
-            <a role="button" class="btn btn-outline-warning" style="width: 200px;" href="cadastro.html">Crie sua conta</a>
+            <a role="button" class="btn btn-outline-warning" style="width: 200px;" href="cadastro.html">Crie sua
+              conta</a>
           </div>
         </div>
       </div>
@@ -171,8 +172,9 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the first item's accordion body.
+            <div class="accordion-body">
+              A GR Eventos nasceu com o objetivo de popularizar os eventos feitos com menos expressão. Nesse intuito nos
+              tornamos uma ótima comunidade acessível e confiavél
             </div>
           </div>
         </div>
@@ -184,9 +186,8 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-              filled with some actual content.
+            <div class="accordion-body">PARCEIROS : <strong>LB RACING</strong>, <strong>Mercury Eventos</strong>,
+              <strong>RV Eventos</strong>, <strong>The ERAS CINE</strong>, <strong>VaVents</strong>, <strong>LETs</strong>.
             </div>
           </div>
         </div>
@@ -198,10 +199,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-              happening here in terms of content, but just filling up the space to make it look, at least at first
-              glance, a bit more representative of how this would look in a real-world application.
+            <div class="accordion-body"><code>GREVENTOS@contato.com.br</code>
             </div>
           </div>
         </div>
