--- a/SiteDeEventos/login.html
+++ b/SiteDeEventos/login.html
@@ -8,6 +8,7 @@
   <title>Página de Login</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <script src="scriptLogin.js"></script>
 </head>
 
 <body class="bg-dark">
@@ -36,7 +37,7 @@
               </div>
 
               <div class="d-grid gap-2">
-                <button class="btn btn-warning" type="button">Login</button>
+                <button class="btn btn-warning" type="button" onclick="login()">Login</button>
               </div>
 
               <br>
