--- a/SiteDeEventos/cadastroe.html
+++ b/SiteDeEventos/cadastroe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 
 <head>
   <meta charset="UTF-8">
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style=" height: 100%;">
   <header class="p-3 text-bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -75,10 +75,12 @@
 
     </div>
   </section>
+
   <br>
   <br>
   <br>
-  <section>
+
+  <section style="position: fixed; bottom: 100px">
     <footer class="text-center text-white" style="background-color: #212529;">
       <div class="container p-4"></div>
       <div class="text-center p-3" style="background-color: #212529;">
@@ -86,6 +88,7 @@
       </div>
     </footer>
   </section>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
