--- a/RevisaoLMR/index.html
+++ b/RevisaoLMR/index.html
@@ -14,9 +14,9 @@
     <header>
         <img src="img/images-removebg-preview.png" alt="logo">
         <div class="menu1">
-            <a href="" class="linkMenu">HOME</a>
-            <a href="" class="linkMenu">PRODUTOS</a>
-            <a href="" class="linkMenu">CONTATO</a>
+            <a href="index.html" class="linkMenu">HOME</a>
+            <a href="produtos.html" class="linkMenu">PRODUTOS</a>
+            <a href="contato.html" class="linkMenu">CONTATO</a>
             <a href="" class="linkMenu">LOGIN</a>
         </div>
         <img src="img/white-hamburger-menu-icon-24.jpg" alt="hamburger" class="hb">
@@ -75,10 +75,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p style="font-size:20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi minus
-                        aliquam autem in,
-                        voluptatem commodi voluptas placeat non reiciendis odit corrupti natus praesentium? Velit fuga
-                        excepturi voluptas cumque laudantium?</p>
+                    <p style="font-size:20px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex molestiae
+                        numquam explicabo? A dicta cum rerum hic perspiciatis at ad recusandae fugiat soluta, blanditiis
+                        molestias? Id suscipit assumenda quas qui.</p>
                 </div>
             </div>
         </div>
@@ -89,10 +88,11 @@
         <br>
         <div class="row featurette">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span
-                        class="text-body-secondary">It’ll blow your mind.</span></h2>
-                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
-                    prose here.</p>
+                <h2 class="featurette-heading fw-normal lh-1" style="font-family: 'Kanit', sans-serif;">Ambiente
+                    rústico<span class="text-body-secondary"> Impressionante.</span></h2>
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt qui quaerat ad saepe
+                    aliquid cum porro veniam alias earum odit, sed voluptatibus soluta? Ad doloremque, quo ipsa
+                    aspernatur labore at.</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
@@ -105,14 +105,16 @@
         <br>
         <div class="row featurette">
             <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span
-                        class="text-body-secondary">See for yourself.</span></h2>
-                <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how
-                    this layout would work with some actual real-world content in place.</p>
+                <h2 class="featurette-heading fw-normal lh-1" style="font-family: 'Kanit', sans-serif;">Pratos
+                    tradicionais! <span class="text-body-secondary">Veja você mesmo.</span></h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio autem, non
+                    voluptatem rerum eaque tenetur esse eius excepturi! Dicta aliquam beatae repellat vero expedita ad
+                    tenetur enim aliquid tempore officia?</p>
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" src="https://s2.glbimg.com/TLSi-Skh-SyW_zL3qXKaqas1NNA=/620x413/smart/e.glbimg.com/og/ed/f/original/2021/09/02/predio-tombado-de-1940-em-sao-paulo-recebe-novo-restaurante-italiano_5.jpg" >
+                    height="500"
+                    src="https://s2.glbimg.com/TLSi-Skh-SyW_zL3qXKaqas1NNA=/620x413/smart/e.glbimg.com/og/ed/f/original/2021/09/02/predio-tombado-de-1940-em-sao-paulo-recebe-novo-restaurante-italiano_5.jpg">
             </div>
         </div>
         <br>
@@ -120,30 +122,29 @@
         <br>
         <div class="row featurette">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span
-                        class="text-body-secondary">It’ll blow your mind.</span></h2>
-                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
-                    prose here.</p>
+                <h2 class="featurette-heading fw-normal lh-1" style="font-family: 'Kanit', sans-serif;">Confira nossos
+                    espaços para fotos. <span class="text-body-secondary">Surpreenda-se!</span></h2>
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel, veritatis
+                    laboriosam voluptatibus voluptates ducimus necessitatibus similique eligendi alias tenetur
+                    laudantium magni mollitia, explicabo voluptatem omnis quaerat. Incidunt, dolorem maxime.</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500"
-                    src="https://indopracozinha.files.wordpress.com/2013/02/osteria-dell-olmo.jpg">
+                    height="500" src="https://indopracozinha.files.wordpress.com/2013/02/osteria-dell-olmo.jpg">
             </div>
         </div>
     </div>
     <br>
     <div class="container">
         <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          </ul>
-          <p class="text-center text-body-secondary">© 2023 Casa di Pasta, Inc</p>
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="produtos.html" class="nav-link px-2 text-body-secondary">Produtos</a></li>
+                <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-body-secondary">Contato</a></li>
+            </ul>
+            <p class="text-center text-body-secondary">© 2023 Casa di Pasta, Inc</p>
         </footer>
-      </div>
+    </div>
 
 
 
