--- a/SiteBACKEND/contato.html
+++ b/SiteBACKEND/contato.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Mensagem:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escreva sua mensagem..."></textarea>
                 </div>
                 <div class="d-grid gap-2">
                     <button class="btn btn-outline-success" type="button">Enviar</button>
