--- a/SiteBACKEND/contato.html
+++ b/SiteBACKEND/contato.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body style=" background-color: #edede9;">
@@ -17,7 +17,7 @@
             <a href="index.html" class="linkMenu">HOME</a>
             <a href="produtos.html" class="linkMenu">PRODUTOS</a>
             <a href="contato.html" class="linkMenu">CONTATO</a>
-            <a href="" class="linkMenu">LOGIN</a>
+            <a href="login.html" class="linkMenu">LOGIN</a>
         </div>
         <img src="img/white-hamburger-menu-icon-24.jpg" alt="hamburger" class="hb">
         <div class="menuHB">
@@ -46,8 +46,7 @@
             <form action="">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nome:</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="Seu Nome">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Seu Nome">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address:</label>
@@ -56,7 +55,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Mensagem:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escreva sua mensagem..."></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Escreva sua mensagem..."></textarea>
                 </div>
                 <div class="d-grid gap-2">
                     <button class="btn btn-outline-success" type="button">Enviar</button>
