--- a/SiteBACKEND/produtos.html
+++ b/SiteBACKEND/produtos.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body style="background-color: #edede9">
@@ -17,7 +17,7 @@
             <a href="index.html" class="linkMenu">HOME</a>
             <a href="produtos.html" class="linkMenu">PRODUTOS</a>
             <a href="contato.html" class="linkMenu">CONTATO</a>
-            <a href="" class="linkMenu">LOGIN</a>
+            <a href="login.html" class="linkMenu">LOGIN</a>
         </div>
         <img src="img/white-hamburger-menu-icon-24.jpg" alt="hamburger" class="hb">
         <div class="menuHB">
