--- a/SA3/cronometro.html
+++ b/SA3/cronometro.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
-    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styleCronometro.css">
 </head>
 
-
-
 <body>
-    <form name="cronometro">
-        <div class="temporizador">
-            <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>:<span id="milisegundos">000</span>
-        </div>
-        <br/>
-        <button name="start">Start</button>
-        <button name="pause">Pause</button>
-        <button name="reset">Reset</button>
-    </form>
-    <script src="script/script.js"></script>
+    <div class="main">
+        <form name="cronometro" class="cron">
+            <div class="temporizador">
+                <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>,<span
+                    id="milisegundos">000</span>
+            </div>
+            <br>
+            <div class="botoes">
+                <button type="button" name="start" id="start">Start</button>
+                <button type="button" name="pause" id="pause">Pause</button>
+                <button type="button" name="reset" id="reset">Reset</button>
+            </div>
+        </form>
+    </div>
+    <script src="script/scriptCronometro.js"></script>
 </body>
 
 </html>
