--- a/SA3/index.html
+++ b/SA3/index.html
@@ -13,26 +13,33 @@
 </head>
 
 <body>
+    <header>
+        <header class="d-flex justify-content-center py-3">
+            <ul class="nav">
+              <li class="nav-item">MENU</li>
+            </ul>
+          </header>
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-4">
                 <a href="">
                     <div class="piano">
-                        <h1>Piano</h1>
+                        <p>PIANO</p>
                     </div>
                 </a>
             </div>
             <div class="col-4">
-                <a href="">
+                <a href="cronometro.html">
                     <div class="cronometro">
-                        <h1> Cronômetro</h1>
+                        <p> CRONÔMETRO</p>
                     </div>
                 </a>
             </div>
             <div class="col-4">
                 <a href="">
                     <div class="jogoDaVelha">
-                        <h1>Jogo Da Velha</h1>
+                        <p>JOGO DA VELHA</p>
                     </div>
                 </a>
             </div>
