--- a/SA3/cronometro.html
+++ b/SA3/cronometro.html
@@ -5,10 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/styleCronometro.css">
 </head>
 
 <body>
+    <header>
+        <header class="d-flex justify-content-space-evenly py-3">
+            <a href="index.html" class="seta">
+                <span class="material-symbols-outlined">
+                    arrow_back
+                </span>
+            </a>
+            <ul class="nav">
+                <li class="nav-item">CRONÔMETRO</li>
+            </ul>
+        </header>
+    </header>
     <div class="main">
         <form name="cronometro" class="cron">
             <div class="temporizador">
