--- a/SA3/index.html
+++ b/SA3/index.html
@@ -16,35 +16,50 @@
     <header>
         <header class="d-flex justify-content-center py-3">
             <ul class="nav">
-              <li class="nav-item">MENU</li>
+                <li class="nav-item">MENU</li>
             </ul>
-          </header>
+        </header>
     </header>
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <a href="">
-                    <div class="piano">
-                        <p>PIANO</p>
+                <a href="piano.html">
+                    <div class="card-sl" id="piano-card">
+                        <div class="card-image" style="background: url(img/piano.png) center/cover;">
+                        </div>
+                        <button type="button" class="card-button" id="piano-button">PIANO</button>
                     </div>
                 </a>
             </div>
             <div class="col-4">
+                <!-- card -->
                 <a href="cronometro.html">
-                    <div class="cronometro">
-                        <p> CRONÔMETRO</p>
+                    <div class="card-sl" id="cron-card">
+                        <div class="card-image"
+                            style="background: url(img/Captura\ de\ tela\ 2023-09-05\ 140934.png) center/cover;">
+                        </div>
+
+                        <button type="button" class="card-button" id="cron-button">CRONÔMETRO</button>
                     </div>
                 </a>
-            </div>
-            <div class="col-4">
-                <a href="">
-                    <div class="jogoDaVelha">
-                        <p>JOGO DA VELHA</p>
-                    </div>
-                </a>
+
+                <!-- card -->
             </div>
 
+            <div class="col-4">
+                <a href="jogoDaVelha.html">
+                    <div class="card-sl" id="jogoVelha-card">
+                        <div class="card-image" style="background: url(img/jogoDaVelha.png) center/cover;">
+                        </div>
+
+
+                        <button type="button" class="card-button" id="jogoVelha-button">JOGO DA VELHA</button>
+                    </div>
+                </a>
+            </div>
         </div>
+
+    </div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
