--- a/SA3/piano.html
+++ b/SA3/piano.html
@@ -25,7 +25,7 @@
                 </span>
             </a>
             <ul class="nav">
-                <li class="nav-item">CRONÔMETRO</li>
+                <a href="index.html"><li class="nav-item">PIANO</li></a>
             </ul>
         </header>
     </div>
