--- a/SA3/cronometro.html
+++ b/SA3/cronometro.html
@@ -21,7 +21,7 @@
                 </span>
             </a>
             <ul class="nav">
-                <li class="nav-item">CRONÔMETRO</li>
+                <a href="index.html"><li class="nav-item">CRONÔMETRO</li></a>
             </ul>
         </header>
     </header>
