--- a/SA3/jogoDaVelha.html
+++ b/SA3/jogoDaVelha.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Jogo Da Velha</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -21,7 +22,7 @@
                 </span>
             </a>
             <ul class="nav">
-                <li class="nav-item">JOGO DA VELHA</li>
+                <a href="index.html"><li class="nav-item">JOGO DA VELHA</li></a>
             </ul>
         </header>
     </header>
