--- a/SA3/cronometro.html
+++ b/SA3/cronometro.html
@@ -29,13 +29,13 @@
         <form name="cronometro" class="cron">
             <div class="temporizador">
                 <span id="horas">00</span>:<span id="minutos">00</span>:<span id="segundos">00</span>,<span
-                    id="milisegundos">000</span>
+                    id="milissegundos">000</span>
             </div>
             <br>
             <div class="botoes">
-                <button type="button" name="start" id="start">Start</button>
+                <button type="button" name="start" id="start">Iniciar</button>
                 <button type="button" name="pause" id="pause">Pause</button>
-                <button type="button" name="reset" id="reset">Reset</button>
+                <button type="button" name="reset" id="reset">Resetar</button>
             </div>
         </form>
     </div>
