--- a/SA3/piano.html
+++ b/SA3/piano.html
@@ -5,32 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teclado virtual</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/stylePiano.css">
     <link rel="shortcut icon" href="img/download-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
+
     <div class="cabecalho">
-        <header class="d-flex justify-content-space-evenly py-3">
+        <header>
             <a href="index.html" class="seta">
                 <span class="material-symbols-outlined">
                     arrow_back
                 </span>
             </a>
-            <ul class="nav">
-                <a href="index.html"><li class="nav-item">PIANO</li></a>
-            </ul>
+            <div class="nav">
+                <a href="index.html">
+                    <a class="nav-item">PIANO</a>
+                </a>
+            </div>
         </header>
     </div>
+
+
+
+
+
+
+
     <div class="container-main">
-        <header class="navbar">
+        <header class="header">
             <p class="tittle"><i class="fa-brands fa-js fa-2xl"></i></p>
             <div class="icon">
                 <i class="fa-solid fa-music fa-beat"></i>
@@ -114,7 +122,7 @@
 
 
 
-    <script src="script/scriptPiano.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
